--- a/assets/osu!lazer.desktop
+++ b/assets/osu!lazer.desktop
@@ -5,9 +5,7 @@ Comment=A free-to-win rhythm game. Rhythm is just a *click* away!
 Icon={icon}
 Exec={appimage}
 Terminal=false
+MimeType=application/x-osu-beatmap-archive;application/x-osu-skin-archive;application/x-osu-beatmap;application/x-osu-storyboard;application/x-osu-replay;x-scheme-handler/osu;
 Categories=Game;
-X-Desktop-File-Install-Version=0.26
-X-SingleMainWindow=true
 StartupWMClass=osu!
-StartupNotify=true
-MimeType=application/x-osu-beatmap;application/x-osu-beatmap-archive;application/x-osu-skin-archive;application/x-osu-storyboard;application/x-osu-replay;application/zip;x-scheme-handler/osu
+SingleMainWindow=true
