--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "osu-lazer-manager"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Manages osu!lazer"
+license = "MIT"
+homepage = "https://github.com/nanashi-1/osu-lazer-manager"
+repository = "https://github.com/nanashi-1/osu-lazer-manager"
 
 [dependencies]
 clap = { version = "4.3.1", features = ["derive"] }
