--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "osu-lazer-manager"
-version = "0.1.1"
+version = "1.0.0"
 edition = "2021"
 description = "Manages osu!lazer"
 license = "MIT"
@@ -8,11 +8,14 @@ homepage = "https://github.com/nanashi-1/osu-lazer-manager"
 repository = "https://github.com/nanashi-1/osu-lazer-manager"
 
 [dependencies]
+anyhow = "1.0.86"
 clap = { version = "4.3.1", features = ["derive"] }
+colored = "2.1.0"
 dirs = "5.0.1"
 futures-util = "0.3.28"
 indicatif = "0.17.6"
-ini = "1.3.0"
 reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
 scraper = "0.17.1"
+serde = { version = "1.0.203", features = ["derive"] }
 tokio = { version = "1.31.0", features = ["full"] }
+toml = "0.8.14"
